--- a/AUTHORS
+++ b/AUTHORS
@@ -1,7 +1,11 @@
-icewm -- authors file.  2025-08-03
+icewm -- authors file.  2025-08-31
 
 Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Author: Luiz Fernando Ranghetti <elchevive68@gmail.com>
+Author: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
 Author: Kempelen <lion@cmsbazar.hu>
+Author: gijsbers <gijsbers@users.noreply.github.com>
+Author: Javier Llorente <javier@opensuse.org>
 Author: Саша Петровић <salepetronije@gmail.com>
 Author: Eduard Bloch <blade@debian.org>
 Author: Jure Repinc <jlp@holodeck1.com>
@@ -37,10 +41,7 @@ Author: Arnold Marko <atomicmind@yahoo.com>
 Author: Foo Bar <foobarcc@segfault.net>
 Author: Vik On <4o3lxdc1y@mozmail.com>
 Author: Petteri Aimonen <jpa@git.mail.kapsi.fi>
-Author: Luiz Fernando Ranghetti <elchevive68@gmail.com>
 Author: diego roversi <diegor@tiscali.it>
-Author: gijsbers <gijsbers@users.noreply.github.com>
-Author: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
 Author: Gustavs Kivlenieks <kivlenieksgustavs@proton.me>
 Author: Kukuh Syafaat <syafaatkukuh@gmail.com>
 Author: ItzSelenux <74371741+ItzSelenux@users.noreply.github.com>
